config opts, refactoring, test data